<resources>
    <string name="app_name">EmeceCuadrado</string>
    <string name="prefs_file">com.example.appmovilmc2firebase.PREFERENCE_FILE_KEY</string>
    <string name="nav_header_title">EmeceCuadrado</string>
    <string name="nav_header_subtitle">emececuadrado@emececuadrado.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ajustes">Ajustes</string>
    <string name="disconnect">Desconectar</string>
    <string name="menu_home">Home</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_puntosdemedida">Puntos de medida</string>
    <string name="menu_estadomedidores">Estado medidores</string>
    <string name="menu_visualizador">Visualizador de gráficas</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_configuracion">Configuración</string>
    <string-array name="type_array_user">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="type_array_tipo_incidencia_punto_de_medida">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="type_array_punto_de_medida">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_pais">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_tipo_punto">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_tipo_planta">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_mod_alq">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_mod_atr_pot">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_recargar">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="type_array_punto_de_medida_tar_zone">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>